--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^1.1.0
+  toast: ^0.1.3
 
   geolocator: '^4.0.0'
   http : '^0.12.0+2'
