--- a/niventis_app_web/pubspec.yaml
+++ b/niventis_app_web/pubspec.yaml
@@ -5,9 +5,13 @@ environment:
   # You must be using Flutter >=1.5.0 or Dart >=2.3.0
   sdk: '>=2.3.0-dev.0.1 <3.0.0'
 
+flutter:
+  uses-material-design: true
+
 dependencies:
   flutter_web: any
   flutter_web_ui: any
+  http : '^0.12.0+2'
 
 dev_dependencies:
   build_runner: ^1.4.0
